src/components/Paginator/Paginator.module.css
/* ------- paginator --------- */
:root {
  --main-txt-cl: #101010;
  --subtle-txt-cl: #ffffff50;
  --main-bg-cl: #fff;
  --secondary-bg-cl: #eac645;

  --primary-cl: #2d3f24;
  --grey5: #a7a5a3;
  --dark-main-txt-cl: #fff;
  --dark-subtle-txt-cl: #11111190;
  --dark-super-subtle-cl: #11111150;
  --dark-main-bg-cl: #111;
}

.paginator {
  margin-top: 56px;
  padding: 20px 0;

  list-style: none;
  display: flex;
  gap: 32px;
}

.paginator button {
  padding: 0 10px;
  min-width: 50px;
  width: fit-content;
  height: 50px;
  border: 1px solid var(--grey5);
  color: var(--main-txt-cl);
  font-weight: 400;
  font-size: 17px;
  line-height: 1;
  background-color: inherit;
  transition: background-color 0.25s;
}
.paginator button:focus,
.paginator button:hover {
  text-shadow: rgba(17, 17, 17, 0.6) 1px 0 2px;
  box-shadow: 2px 2px 6px 4px rgba(0, 0, 0, 0.35);
  scale: 0.95;
  outline: none;
}
.paginator button:active {
  scale: 0.9;
}

.paginator button:disabled {
  color: var(--main-bg-cl);
  background-color: var(--primary-cl);
  text-shadow: #fc0 1px 0 10px;
  pointer-events: none;
}

[data-hidden='true'] {
  display: none;
}

/* addition width+gap of disappearing buttons to padding of ul to avoid moving navigation buttons   */
.paginator:has(> li:first-child[data-hidden='true']) {
  padding-left: 40px;
}
.paginator:has(
    > li:first-child[data-hidden='true'] + li:nth-child(2)[data-hidden='true']
  ) {
  padding-left: 80px;
}
/* ------------------- */

.paginator > li:last-child {
  position: relative;
}

.last_page_translucent {
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translate(-50%, -50%) scale(1);
  color: blue;
  text-shadow: 2px 2px 6px orange;
  font-size: 0.7em;
  letter-spacing: 0;
  opacity: 0.5;
}
.paginator > li:last-child > button:disabled {
  color: var(--subtle-txt-cl);
}

.paginator button:disabled .last_page_translucent {
  color: var(--main-bg-cl);
  font-size: 1.8em;
  top: 50%;
}

/* dark theme */
#dark {
  background-color: var(--dark-main-bg-cl);
}

#dark button {
  color: var(--dark-main-txt-cl);
  background-color: inherit;
  border-color: var(--dark-main-txt-cl);
}

#dark button[data-type='styled'] {
  color: var(--main-txt-cl);
  border-color: var(--dark-main-bg-cl);
  background-color: var(--secondary-bg-cl);
}

#dark button:focus,
#dark button:hover {
  box-shadow: 2px 2px 6px 4px rgba(200, 200, 200, 0.35);
}

#dark button:disabled {
  color: var(--dark-subtle-txt-cl);
  background-color: var(--dark-main-txt-cl);
}

#dark li:last-child button:disabled {
  color: var(--dark-super-subtle-cl);
}

#dark .last_page_translucent {
  color: var(--dark-main-bg-cl);
}

